lib_LTLIBRARIES= libViewpointCursor.la

libViewpointCursor_la_SOURCES=\
							  Plane.cpp \
							  ViewpointCursor.cpp

libViewpointCursor_la_includedir=$(includedir)/wcl
libViewpointCursor_la_include_HEADERS=\
									  Plane.h \
									  Selection.h\
									  Selectable.h\
									  ViewpointCursor.h

